Thu May 31 08:31:22 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* dln.c: #define S_ISDIR if not defined.

Thu May 31 01:28:54 2001  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: default --with-libc_r to `no' until the problem is
	  fixed. (FreeBSD only)

Tue May 29 18:46:04 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_compile_pattern): * \1 .. \9 should be
	  backreferences always.

	* regex.c (re_match): backreferences corresponding to
	  unclosed/unmatched parentheses should fail always.

Mon May 28 23:20:43 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: remove unnecessary AC_CANONICAL_BUILD

	* defins.h: #define HAVE_SETITIMER on Cygwin(bug fixed).

	* ruby.c: use relative path from LIBRUBY_SO.

	* ruby.c: don't use -mwin32 option on Cygwin.

	* cygwin/GNUmakefile.in: ditto.

	* ext/sdbm/_sdbm: ditto.

	* ext/tcltklib/extconf.rb: ditto.

	* ext/tcltklib/stubs.c: ditto.

Mon May 28 22:12:01 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* ext/extconf.rb.in: make the priority of the make rule of .c
	  higher than .C .

Mon May 28 02:43:16 2001  Akinori MUSHA  <knu@iDaemons.org>

	* dir.c (rb_glob_helper): teach has_magic() to handle flags and
	  get rb_glob_helper to properly support FNM_NOESCAPE.

	* dir.c (fnmatch): fix a bug when FNM_PATHNAME and FNM_PERIOD are
	  specified at the same time.

Sat May 26 07:19:48 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* win32/win32.c (opendir): add const directive.

Sat May 26 07:00:05 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* MANIFEST: add win32/dir.h .

Sat May 26 00:15:57 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* win32/dir.h: replace missing/dir.h .

	* dir.c: ditto.

Fri May 25 14:19:25 2001  K.Kosako  <kosako@sofnec.co.jp>

	* string.c (rb_str_replace): add taint status infection
	  (OBJ_INFECT()).

	* string.c (rb_str_crypt): ditto.

	* string.c (rb_str_ljust): ditto.

	* string.c (rb_str_rjust): ditto.

	* string.c (rb_str_center): ditto.
